@@ -1,13 +1,8 @@
 package ua.com.fielden.platform.processors.test_utils;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
-import java.util.function.Consumer;
-import java.util.stream.Collectors;
+import com.google.testing.compile.ForwardingStandardJavaFileManager;
+import ua.com.fielden.platform.processors.test_utils.exceptions.CompilationException;
+import ua.com.fielden.platform.types.try_wrapper.ThrowableConsumer;
 
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.ProcessingEnvironment;
@@ -15,60 +10,61 @@ import javax.annotation.processing.Processor;
 import javax.annotation.processing.RoundEnvironment;
 import javax.lang.model.SourceVersion;
 import javax.lang.model.element.TypeElement;
-import javax.tools.Diagnostic;
-import javax.tools.DiagnosticCollector;
-import javax.tools.JavaCompiler;
+import javax.tools.*;
 import javax.tools.JavaCompiler.CompilationTask;
-import javax.tools.JavaFileManager;
-import javax.tools.JavaFileObject;
-import javax.tools.ToolProvider;
-
-import org.junit.runners.model.Statement;
-
-import ua.com.fielden.platform.processors.test_utils.exceptions.CompilationException;
-import ua.com.fielden.platform.types.try_wrapper.ThrowableConsumer;
+import java.io.IOException;
+import java.util.*;
+import java.util.function.Consumer;
 
 /**
  * An abstraction for compiling java sources that is based on {@link CompilationTask} with the primary purpose of evaluating additional statements in the annotation processing environment.
  * <p>
  * In order to obtain independent results it is recommended to use a fresh instance for every invokation of a method responsible for compilation.
  * In other words, compiling more than once with the same instance of this class does not guarantee the result will be independent of the
- * previous compilation. 
+ * previous compilation.
  * <p>
  * Makes a convenient annotation processor testing utility.
- * 
+ *
  * @author TG Team
  */
 public final class Compilation {
     /** Java compiler option to perform only annotation processing (without subsequent compilation) */
     public static final String OPTION_PROC_ONLY = "-proc:only";
 
-    private Collection<? extends JavaFileObject> javaSources;
+    private final Set<JavaFileObject> javaSources;
     private Processor processor;
     private JavaCompiler compiler;
-    private JavaFileManager fileManager;
-    private Iterable<String> options;
+    private StandardJavaFileManager fileManager;
+    private final List<String> options = new LinkedList<>();
     private DiagnosticCollector<JavaFileObject> diagnosticListener = new DiagnosticCollector<>();
 
-    private final List<Diagnostic<? extends JavaFileObject>> diagnostics = new ArrayList<>();
+    /**
+     * Creates a new instance that stores the compiled sources in memory by using a preconfigured {@link #compiler} and {@link #fileManager}.
+     *
+     * @param javaSources   java sources to be compiled
+     * @return              a new compilation instance
+     */
+    public static Compilation newInMemory(final Collection<? extends JavaFileObject> javaSources) {
+        final JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+        final InMemoryJavaFileManager fileManager = new InMemoryJavaFileManager(compiler.getStandardFileManager(null, null, null));
+
+        return new Compilation(javaSources).setCompiler(compiler).setFileManager(fileManager);
+    }
 
     /**
      * Only a single annotation processor is allowed to ensure that the processing environment is not shared with other processors, which could lead to unexpected behaviour.
-     * 
+     *
      * @param javaSources java sources to compile
-     * @param processor annotation processor to use during compilation
-     * @param compiler
-     * @param fileManager
-     * @param options
      */
     public Compilation(final Collection<? extends JavaFileObject> javaSources) {
-        this.javaSources = javaSources;
+        this.javaSources = new HashSet<>(javaSources);
         this.compiler = ToolProvider.getSystemJavaCompiler();
         this.fileManager = compiler.getStandardFileManager(null, null, null);
     }
 
     public Compilation setJavaSources(final Collection<? extends JavaFileObject> javaSources) {
-        this.javaSources = javaSources;
+        this.javaSources.clear();
+        this.javaSources.addAll(javaSources);
         return this;
     }
 
@@ -82,18 +78,23 @@ public final class Compilation {
         return this;
     }
 
-    public Compilation setFileManager(final JavaFileManager fileManager) {
+    public Compilation setFileManager(final StandardJavaFileManager fileManager) {
         this.fileManager = fileManager;
         return this;
     }
 
-    public Compilation setOptions(final Iterable<String> options) {
-        this.options = options;
+    public Compilation addOptions(final Iterable<String> options) {
+        options.forEach(opt -> this.options.add(opt));
         return this;
     }
-    
-    public Compilation setOptions(final String... options) {
-        this.options = Arrays.asList(options);
+
+    public Compilation addOptions(final String... options) {
+        this.options.addAll(List.of(options));
+        return this;
+    }
+
+    public Compilation addProcessorOption(final String key, final String value) {
+        this.options.add("-A%s=%s".formatted(key, value));
         return this;
     }
 
@@ -108,34 +109,35 @@ public final class Compilation {
      * Use whenever {@code evaluator} might throw.
      *
      * @param evaluator
-     * @return
-     * @throws Throwable
+     * @return result of the compilation
+     * @throws Throwable    an exception that might be thrown by {@code evaluator}
      */
-    public boolean compileAndEvaluatef(final ThrowableConsumer<ProcessingEnvironment> evaluator) {
+    public CompilationResult compileAndEvaluatef(final ThrowableConsumer<ProcessingEnvironment> evaluator) {
         final EvaluatingProcessor evaluatingProcessor = new EvaluatingProcessor(evaluator);
-        final boolean success = doCompile(evaluatingProcessor);
-        evaluatingProcessor.throwIfStatementThrew();
-        return success;
+        final CompilationResult result = doCompile(evaluatingProcessor);
+        evaluatingProcessor.throwIfEvaluatorThrew();
+        return result;
     }
-    
+
     /**
      * Performs compilation and applies {@code evaluator} during the last round of annotation processing.
      *
      * @param evaluator
-     * @return
-     * @throws Throwable
+     * @return result of the compilation
+     * @throws Throwable    an exception that might be thrown by {@code evaluator}
      */
-    public boolean compileAndEvaluate(final Consumer<ProcessingEnvironment> evaluator) {
+    public CompilationResult compileAndEvaluate(final Consumer<ProcessingEnvironment> evaluator) {
         return compileAndEvaluatef((procEnv) -> evaluator.accept(procEnv));
     }
-    
-    public boolean compile() {
+
+    public CompilationResult compile() {
         return compileAndEvaluate((procEnv) -> {});
     }
 
-    private boolean doCompile(final EvaluatingProcessor processor) {
+    private CompilationResult doCompile(final EvaluatingProcessor processor) {
+        final ForwardingJavaFileManagerWithCache fileManager = new ForwardingJavaFileManagerWithCache(this.fileManager);
         final CompilationTask task = compiler.getTask(
-                null, // Writer for additional output from the compiler (null => System.err)                
+                null, // Writer for additional output from the compiler (null => System.err)
                 fileManager,
                 diagnosticListener,
                 options,
@@ -144,25 +146,8 @@ public final class Compilation {
         task.setProcessors(List.of(processor));
         final boolean success = task.call();
 
-        diagnostics.clear();
-        diagnostics.addAll(diagnosticListener.getDiagnostics());
-
-        return success;
-    }
-
-    public List<Diagnostic<? extends JavaFileObject>> getDiagnostics() {
-        return Collections.unmodifiableList(diagnostics);
-    }
-
-    public List<Diagnostic<? extends JavaFileObject>> getErrors() {
-        return diagnostics.stream()
-                .filter(diag -> diag.getKind().equals(Diagnostic.Kind.ERROR))
-                .collect(Collectors.toUnmodifiableList());
-    }
-    
-    /** A convenient method that prints collected diagnostics to {@link System#out}. */
-    public void printDiagnostics() {
-        System.out.println(diagnostics.stream().map(Diagnostic::toString).collect(Collectors.joining("\n")));
+        return new CompilationResult(success, diagnosticListener.getDiagnostics(), processor.processingErrors,
+                fileManager.getGeneratedSources());
     }
 
     /**
@@ -172,7 +157,8 @@ public final class Compilation {
     private final class EvaluatingProcessor extends AbstractProcessor {
 
         private final ThrowableConsumer<ProcessingEnvironment> evaluator;
-        private CompilationException thrown;
+        private CompilationException evaluatorError;
+        private final List<Throwable> processingErrors = new LinkedList<>();
 
         public EvaluatingProcessor(final ThrowableConsumer<ProcessingEnvironment> evaluator) {
             this.evaluator = evaluator;
@@ -180,16 +166,21 @@ public final class Compilation {
 
         @Override
         public SourceVersion getSupportedSourceVersion() {
-            return SourceVersion.latest();
+            return processor != null ? processor.getSupportedSourceVersion() : SourceVersion.latestSupported();
         }
 
         @Override
         public Set<String> getSupportedAnnotationTypes() {
-            return Set.of("*");
+            return processor != null ? processor.getSupportedAnnotationTypes() : Set.of("*");
         }
 
         @Override
-        public synchronized void init(ProcessingEnvironment processingEnv) {
+        public Set<String> getSupportedOptions() {
+            return processor != null ? processor.getSupportedOptions() : super.getSupportedOptions();
+        }
+
+        @Override
+        public synchronized void init(final ProcessingEnvironment processingEnv) {
             super.init(processingEnv);
             if (processor != null) {
                 processor.init(processingEnv);
@@ -197,27 +188,59 @@ public final class Compilation {
         }
 
         @Override
-        public boolean process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
+        public boolean process(final Set<? extends TypeElement> annotations, final RoundEnvironment roundEnv) {
             if (processor != null) {
-                processor.process(annotations, roundEnv);
+                try {
+                    processor.process(annotations, roundEnv);
+                } catch (final Throwable ex) {
+                    processingErrors.add(ex);
+                }
             }
             if (roundEnv.processingOver()) {
                 try {
                     evaluator.accept(processingEnv);
                 } catch (final Throwable ex) {
-                    thrown = new CompilationException(ex);
+                    evaluatorError = new CompilationException(ex);
                 }
             }
             return false;
         }
 
-        /** 
-         * Throws what {@code base} {@link Statement} threw, if anything. 
+        /**
+         * Throws what {@link #evaluator} threw, if anything.
          */
-        void throwIfStatementThrew() {
-            if (thrown != null) {
-                throw thrown;
+        void throwIfEvaluatorThrew() {
+            if (evaluatorError != null) {
+                throw evaluatorError;
             }
+        }
+    }
+
+    /**
+     * A forwarding java file manager that remembers generated sources so that they can be retrieved later.
+     */
+    private static final class ForwardingJavaFileManagerWithCache extends ForwardingStandardJavaFileManager {
+
+        private final List<JavaFileObject> generatedJavaSources = new ArrayList<>();
+
+        ForwardingJavaFileManagerWithCache(StandardJavaFileManager fileManager) {
+            super(fileManager);
+        }
+
+        @Override
+        public JavaFileObject getJavaFileForOutput(
+                Location location, String className, final JavaFileObject.Kind kind, FileObject sibling)
+                throws IOException
+        {
+            JavaFileObject jfo = super.getJavaFileForOutput(location, className, kind, sibling);
+            if (location.isOutputLocation() && kind == JavaFileObject.Kind.SOURCE) {
+                generatedJavaSources.add(jfo);
+            }
+            return jfo;
+        }
+
+        public List<JavaFileObject> getGeneratedSources() {
+            return List.copyOf(generatedJavaSources);
         }
     }
 
