@@ -2,15 +2,12 @@ package ua.com.fielden.platform.criteria.generator.impl;
 
 import static java.lang.String.format;
 import static java.util.Collections.emptyList;
+import static java.util.stream.Collectors.toCollection;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Stream.empty;
 import static java.util.stream.Stream.of;
 import static org.apache.logging.log4j.LogManager.getLogger;
-import static ua.com.fielden.platform.criteria.generator.impl.CriteriaReflector.from;
-import static ua.com.fielden.platform.criteria.generator.impl.CriteriaReflector.getCriteriaTitleAndDesc;
-import static ua.com.fielden.platform.criteria.generator.impl.CriteriaReflector.is;
-import static ua.com.fielden.platform.criteria.generator.impl.CriteriaReflector.not;
-import static ua.com.fielden.platform.criteria.generator.impl.CriteriaReflector.to;
+import static ua.com.fielden.platform.criteria.generator.impl.CriteriaReflector.*;
 import static ua.com.fielden.platform.criteria.generator.impl.SynchroniseCriteriaWithModelHandler.applySnapshot;
 import static ua.com.fielden.platform.domaintree.impl.AbstractDomainTree.isCritOnlySingle;
 import static ua.com.fielden.platform.domaintree.impl.AbstractDomainTree.isDoubleCriterion;
@@ -22,16 +19,20 @@ import static ua.com.fielden.platform.reflection.AnnotationReflector.getAnnotati
 import static ua.com.fielden.platform.reflection.AnnotationReflector.getPropertyAnnotation;
 import static ua.com.fielden.platform.reflection.AnnotationReflector.getPropertyAnnotationOptionally;
 import static ua.com.fielden.platform.reflection.PropertyTypeDeterminator.determinePropertyType;
+import static ua.com.fielden.platform.reflection.asm.impl.DynamicEntityClassLoader.modifiedClass;
+import static ua.com.fielden.platform.reflection.asm.impl.DynamicTypeNamingService.generateCriteriaTypeName;
 import static ua.com.fielden.platform.types.tuples.T2.t2;
+import static ua.com.fielden.platform.utils.CollectionUtil.linkedMapOf;
 import static ua.com.fielden.platform.utils.CollectionUtil.listOf;
 import static ua.com.fielden.platform.utils.EntityUtils.isDate;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
+import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Map;
-import java.util.WeakHashMap;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.logging.log4j.Logger;
@@ -47,19 +48,9 @@ import ua.com.fielden.platform.domaintree.centre.ICentreDomainTreeManager.IAddTo
 import ua.com.fielden.platform.domaintree.centre.ICentreDomainTreeManager.ICentreDomainTreeManagerAndEnhancer;
 import ua.com.fielden.platform.entity.AbstractEntity;
 import ua.com.fielden.platform.entity.DefaultEntityProducerWithContext;
-import ua.com.fielden.platform.entity.annotation.CritOnly;
+import ua.com.fielden.platform.entity.annotation.*;
 import ua.com.fielden.platform.entity.annotation.CritOnly.Type;
-import ua.com.fielden.platform.entity.annotation.DateOnly;
-import ua.com.fielden.platform.entity.annotation.IsProperty;
-import ua.com.fielden.platform.entity.annotation.PersistentType;
-import ua.com.fielden.platform.entity.annotation.TimeOnly;
-import ua.com.fielden.platform.entity.annotation.factory.AfterChangeAnnotation;
-import ua.com.fielden.platform.entity.annotation.factory.CriteriaPropertyAnnotation;
-import ua.com.fielden.platform.entity.annotation.factory.EntityTypeAnnotation;
-import ua.com.fielden.platform.entity.annotation.factory.FirstParamAnnotation;
-import ua.com.fielden.platform.entity.annotation.factory.IsPropertyAnnotation;
-import ua.com.fielden.platform.entity.annotation.factory.SecondParamAnnotation;
-import ua.com.fielden.platform.entity.annotation.factory.SkipEntityExistsValidationAnnotation;
+import ua.com.fielden.platform.entity.annotation.factory.*;
 import ua.com.fielden.platform.entity.factory.EntityFactory;
 import ua.com.fielden.platform.entity.factory.ICompanionObjectFinder;
 import ua.com.fielden.platform.entity.meta.MetaProperty;
@@ -67,7 +58,7 @@ import ua.com.fielden.platform.entity_centre.review.criteria.EnhancedCentreEntit
 import ua.com.fielden.platform.entity_centre.review.criteria.EntityQueryCriteria;
 import ua.com.fielden.platform.reflection.Finder;
 import ua.com.fielden.platform.reflection.asm.api.NewProperty;
-import ua.com.fielden.platform.reflection.asm.impl.DynamicEntityClassLoader;
+import ua.com.fielden.platform.types.tuples.T2;
 import ua.com.fielden.platform.utils.EntityUtils;
 import ua.com.fielden.platform.utils.Pair;
 
@@ -78,60 +69,48 @@ import ua.com.fielden.platform.utils.Pair;
  *
  */
 public class CriteriaGenerator implements ICriteriaGenerator {
-
+    private static final String ERR_CRIT_TYPE_GEN_CENTRE_MANAGER_MISSING = "Criteria type could not be generated for empty centreManager.";
+    private static final String ERR_CRIT_TYPE_COULD_NOT_BE_GENERATED = "Criteria type for [%s] could not be generated.";
     private static final Logger LOGGER = getLogger(CriteriaGenerator.class);
+    /**
+     * Type diff object's key for selected criteria properties, used in generated criteria type naming.
+     */
+    private static final String PROPERTIES = "properties";
 
     private final EntityFactory entityFactory;
 
     private final ICompanionObjectFinder coFinder;
 
-    private final Map<Class<?>, Class<?>> generatedClasses;
-
     @Inject
     public CriteriaGenerator(final EntityFactory entityFactory, final ICompanionObjectFinder controllerProvider) {
         this.entityFactory = entityFactory;
         this.coFinder = controllerProvider;
-        this.generatedClasses = new WeakHashMap<>();
     }
 
-    @Override
-    public <T extends AbstractEntity<?>> EnhancedCentreEntityQueryCriteria<T, IEntityDao<T>> generateCentreQueryCriteria(final Class<T> root, final ICentreDomainTreeManagerAndEnhancer cdtme, final Annotation... customAnnotations) {
-        return (EnhancedCentreEntityQueryCriteria<T, IEntityDao<T>>) generateQueryCriteria(root, cdtme, null, customAnnotations);
-    }
-
-    @Override
-    public <T extends AbstractEntity<?>> EnhancedCentreEntityQueryCriteria<T, IEntityDao<T>> generateCentreQueryCriteria(final Class<T> root, final ICentreDomainTreeManagerAndEnhancer cdtme, final Class<?> miType, final Annotation... customAnnotations) {
-        return (EnhancedCentreEntityQueryCriteria<T, IEntityDao<T>>) generateQueryCriteria(root, cdtme, miType, customAnnotations);
-    }
-
-    @SuppressWarnings({ "unchecked" })
-    private <T extends AbstractEntity<?>, CDTME extends ICentreDomainTreeManagerAndEnhancer> EntityQueryCriteria<CDTME, T, IEntityDao<T>> generateQueryCriteria(final Class<T> root, final CDTME cdtme, final Class<?> miType, final Annotation... customAnnotations) {
+    @SuppressWarnings({ "unchecked", "deprecation" })
+    private <T extends AbstractEntity<?>> EnhancedCentreEntityQueryCriteria<T, IEntityDao<T>> generateCentreQueryCriteria(
+        final Supplier<T2<Class<? extends EntityQueryCriteria<ICentreDomainTreeManagerAndEnhancer, T, IEntityDao<T>>>, Class<T>>> queryCriteriaClassAndRootSupplier,
+        final ICentreDomainTreeManagerAndEnhancer cdtme
+    ) {
         try {
-            final Class<? extends EntityQueryCriteria<CDTME, T, IEntityDao<T>>> queryCriteriaClass;
+            final var queryCriteriaClassAndRoot = queryCriteriaClassAndRootSupplier.get();
 
-            if (miType != null && generatedClasses.containsKey(miType)) {
-                queryCriteriaClass = (Class<? extends EntityQueryCriteria<CDTME, T, IEntityDao<T>>>) generatedClasses.get(miType);
-            } else {
-                queryCriteriaClass = generateCriteriaType(root, cdtme.getFirstTick().checkedProperties(root), cdtme.getEnhancer().getManagedType(root), customAnnotations);
-                generatedClasses.put(miType, queryCriteriaClass);
-            }
-
-            final DefaultEntityProducerWithContext<EntityQueryCriteria<CDTME, T, IEntityDao<T>>> criteriaEntityProducer = new DefaultEntityProducerWithContext<>(entityFactory, (Class<EntityQueryCriteria<CDTME, T, IEntityDao<T>>>) queryCriteriaClass, coFinder);
-            final EntityQueryCriteria<CDTME, T, IEntityDao<T>> criteriaEntity = criteriaEntityProducer.newEntity();
+            final DefaultEntityProducerWithContext<EntityQueryCriteria<ICentreDomainTreeManagerAndEnhancer, T, IEntityDao<T>>> criteriaEntityProducer = new DefaultEntityProducerWithContext<>(entityFactory, (Class<EntityQueryCriteria<ICentreDomainTreeManagerAndEnhancer, T, IEntityDao<T>>>) queryCriteriaClassAndRoot._1, coFinder);
+            final EntityQueryCriteria<ICentreDomainTreeManagerAndEnhancer, T, IEntityDao<T>> criteriaEntity = criteriaEntityProducer.newEntity();
             criteriaEntity.beginInitialising();
             criteriaEntity.setKey("not required");
             criteriaEntity.endInitialising();
 
             //Set dao for generated entity query criteria.
             final Field daoField = Finder.findFieldByName(EntityQueryCriteria.class, "dao");
-            final boolean isDaoAccessable = daoField.isAccessible();
+            final boolean isDaoAccessable = daoField.isAccessible(); // canAccess(criteriaEntity) is not applicable here as we are returning back whole field accessibility, not field accessibility for concrete instance
             daoField.setAccessible(true);
-            daoField.set(criteriaEntity, coFinder.find(root));
+            daoField.set(criteriaEntity, coFinder.find(queryCriteriaClassAndRoot._2));
             daoField.setAccessible(isDaoAccessable);
 
             //Set domain tree manager for entity query criteria.
             final Field dtmField = Finder.findFieldByName(EntityQueryCriteria.class, "cdtme");
-            final boolean isCdtmeAccessable = dtmField.isAccessible();
+            final boolean isCdtmeAccessable = dtmField.isAccessible(); // canAccess(criteriaEntity) is not applicable here as we are returning back whole field accessibility, not field accessibility for concrete instance
             dtmField.setAccessible(true);
             dtmField.set(criteriaEntity, cdtme);
             dtmField.setAccessible(isCdtmeAccessable);
@@ -140,11 +119,25 @@ public class CriteriaGenerator implements ICriteriaGenerator {
             //in order to synchronise entity query criteria values with model values
             synchroniseWithModel(criteriaEntity);
 
-            return criteriaEntity;
+            return (EnhancedCentreEntityQueryCriteria<T, IEntityDao<T>>) criteriaEntity;
         } catch (final Exception e) {
             LOGGER.error(e.getMessage(), e);
             throw new IllegalStateException(e);
         }
+    }
+
+    @SuppressWarnings({ "unchecked" })
+    @Override
+    public <T extends AbstractEntity<?>> EnhancedCentreEntityQueryCriteria<T, IEntityDao<T>> generateCentreQueryCriteria(final ICentreDomainTreeManagerAndEnhancer centreManager) {
+        return generateCentreQueryCriteria(() -> {
+            if (centreManager == null) {
+                throw new CriteriaGeneratorException(ERR_CRIT_TYPE_GEN_CENTRE_MANAGER_MISSING);
+            }
+            final var root = (Class<T>) centreManager.getRepresentation().rootTypes().iterator().next(); // multiple root types are rather rudimentary (were used in Snappy); single one must exist here
+            final var managedType = centreManager.getEnhancer().getManagedType(root);
+            final var propsForSelectionCriteria = centreManager.getFirstTick().checkedProperties(root);
+            return t2(generateCriteriaType(root, propsForSelectionCriteria, managedType), root);
+        }, centreManager);
     }
 
     /**
@@ -153,41 +146,29 @@ public class CriteriaGenerator implements ICriteriaGenerator {
      * @param root -- root type from which <code>managedType</code> has been derived (calculated props added)
      * @param properties
      * @param managedType
-     * @param customAnnotations -- custom annotations for generated criteria type
      * @return
      */
     @SuppressWarnings({ "unchecked" })
-    static <CDTME extends ICentreDomainTreeManagerAndEnhancer, T extends AbstractEntity<?>> Class<? extends EntityQueryCriteria<CDTME, T, IEntityDao<T>>> generateCriteriaType(
+    static <T extends AbstractEntity<?>> Class<? extends EntityQueryCriteria<ICentreDomainTreeManagerAndEnhancer, T, IEntityDao<T>>> generateCriteriaType(
         final Class<T> root,
         final List<String> properties,
-        final Class<?> managedType,
-        final Annotation... customAnnotations)
+        final Class<?> managedType)
     {
-        final List<NewProperty> newProperties = new ArrayList<>();
-        for (final String propertyName : properties) {
-            if (!isPlaceholder(propertyName)) {
-                newProperties.addAll(generateCriteriaProperties(root, managedType, propertyName));
-            }
-        }
+        final String newTypeName = generateCriteriaTypeName(CentreEntityQueryCriteriaToEnhance.class, linkedMapOf(t2(PROPERTIES, properties)), managedType);
         try {
-            return (Class<? extends EntityQueryCriteria<CDTME, T, IEntityDao<T>>>)
-                    DynamicEntityClassLoader.startModification(CentreEntityQueryCriteriaToEnhance.class)
-                    .addClassAnnotations(customAnnotations)
-                    .addProperties(newProperties.toArray(new NewProperty[0]))
-                    .endModification();
-        } catch (final ClassNotFoundException ex) {
-            throw new CriteriaGeneratorException(format("Criteria type for [%s] could not be generated.", root.getSimpleName()), ex);
+            return (Class<? extends EntityQueryCriteria<ICentreDomainTreeManagerAndEnhancer, T, IEntityDao<T>>>)
+                modifiedClass(newTypeName, CentreEntityQueryCriteriaToEnhance.class, typeMaker -> typeMaker
+                    .addProperties(properties.stream()
+                        .filter(pn -> !isPlaceholder(pn))
+                        .flatMap(pn -> generateCriteriaProperties(root, managedType, pn).stream())
+                        .collect(toCollection(LinkedHashSet::new))
+                    )
+                );
+        } catch (final Exception ex) {
+            final var critGenEx = new CriteriaGeneratorException(ERR_CRIT_TYPE_COULD_NOT_BE_GENERATED.formatted(root.getSimpleName()), ex);
+            LOGGER.error(critGenEx.getMessage(), critGenEx);
+            throw critGenEx;
         }
-    }
-
-    /**
-     * {@inheritDoc}
-     * <p>
-     * This implementation clears generated selection criteria classes that become out-dated when adding / removing selection criteria properties to Web UI centre configurations.
-     */
-    @Override
-    public void clear() {
-        generatedClasses.clear();
     }
 
     /**
@@ -322,16 +303,19 @@ public class CriteriaGenerator implements ICriteriaGenerator {
         final IAddToCriteriaTickManager ftm = criteriaEntity.getCentreDomainTreeMangerAndEnhancer().getFirstTick();
         CriteriaReflector.getCriteriaProperties(criteriaEntity.getType()).stream().map(propertyField -> {
             final String critPropName = getAnnotation(propertyField, CriteriaProperty.class).propertyName();
-            return t2(propertyField, getAnnotation(propertyField, SecondParam.class) == null ? ftm.getValue(root, critPropName) : ftm.getValue2(root, critPropName));
-        }).collect(toList()).forEach(fieldAndVal -> { // there is a need to collect all results BEFORE forEach processing due to mutable nature of 'getValue*' methods
-            final Field field = fieldAndVal._1;
+            // collect values for criteria properties in centreManager
+            return t2(propertyField.getName(), getAnnotation(propertyField, SecondParam.class) == null ? ftm.getValue(root, critPropName) : ftm.getValue2(root, critPropName));
+            // we must collect all values BEFORE forEach that uses criteriaEntity.getProperty(name).setValue(....)
+            // to avoid ftm.setValue(...) calls through SynchroniseCriteriaWithModelHandler ACE handler while collecting values, which may affect unrelated properties
+        }).toList().forEach(nameAndVal -> {
+            final var name = nameAndVal._1;
             try {
                 // LOGGER.error(format("\tsynchroniseWithModel prop [%s] setting... val = [%s]", field.getName(), fieldAndVal._2));
                 // need to enforce the setting to ensure invocation of SynchroniseCriteriaWithModelHandler; this will ensure application of editable / required (and other) attributes and integrity of property dependencies
-                criteriaEntity.getProperty(field.getName()).setValue(fieldAndVal._2, true);
+                criteriaEntity.getProperty(name).setValue(nameAndVal._2, true);
                 // LOGGER.error("\tsynchroniseWithModel. valResult = " + criteriaEntity.getProperty(field.getName()).getFirstFailure());
             } catch (final Exception ex) {
-                LOGGER.warn(format("\tCould not assign crit value to [%s] in root [%s].", field.getName(), root.getName()));
+                LOGGER.warn(format("\tCould not assign crit value to [%s] in root [%s].", name, root.getName()));
             } 
             // finally { LOGGER.error(format("\tsynchroniseWithModel prop [%s] setting...done", field.getName())); }
         });
